syntax = "proto3";

package security;

import "protos/models/security/security.proto";
import "protos/models/position/position_filter.proto";
import "protos/models/price/price.proto";

import "protos/requests/util/operation.proto";

option java_multiple_files = true;
option java_package = "common.request.protos";
option java_outer_classname = "ValuationRequestProtos";

message ValuationRequestProto {
  string object_class = 1;
  string version = 2;

  //Only supports GET, since there is no backing store, so CREATE isn't relevant. SEARCH isn't relevant either.
  //VALIDATE could be implemented later, e.g. if the caller wants to check their inputs are correct.
  util.RequestOperationTypeProto operation_type = 10;

  security.SecurityProto security_input = 20;
  position.PositionFilterProto position_input= 21;
  price.PriceProto price_input = 22;
}


